apps/rollout-demo/base/rollout.yaml
# apps/rollout-demo/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rollout-demo
  strategy:
    canary:
      steps:
        - setWeight: 50
        - pause:
            duration: 30s
        - setWeight: 100
  template:
    metadata:
      labels:
        app: rollout-demo
    spec:
      containers:
        - name: nginx
          image: nginx:1.28.0-alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
